--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,9 @@
 * {
   font-family: 'Roboto', sans-serif;
 }
+header {
+  position: relative;
+}
 nav {
 height: 50px;
 background: #212121;
@@ -25,6 +28,8 @@ text-decoration: none;
   .subheader {
   background-color: rgba(0, 0, 0, .6);
   height: 84px;
+  position: absolute;
+  width: 100%;
   }
   .subheader .subheader_logo {
     display: block;
@@ -69,6 +74,54 @@ border-radius: 4px;
 font-weight: 400;
 font-size: 14px;
 align-items: center;
+text-align: center;
+text-transform: uppercase;
+color: #FFFFFF;
+text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21);
+  }
+  .promo {
+    min-height: 800px;
+    background: url(../img/uber_bg.jpg) center center/cover no-repeat;
+    padding: 150px 0 135px 0;
+  }
+  .promo .promo_header {
+font-weight: 700;
+font-size: 60px;
+text-transform: uppercase;
+color: #FFFFFF;
+line-height: 60px;
+margin: 0;
+text-align: center;
+  }
+  .promo .promo_subheader {
+    font-weight: 700;
+    font-size: 36px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    line-height: 36px;
+    margin: 0;
+    margin-top: 22px;
+    text-align: center;
+  }
+  .promo .promo_descr {
+font-weight: 400;
+font-size: 18px;
+line-height: 24px;
+text-align: center;
+color: #FFFFFF;
+margin-top: 23px;
+  }
+  .promo .promo_btn {
+display: block;
+margin: 118px auto 0 auto;
+width: 259px;
+height: 63px;
+background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%);
+box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.12);
+border: none;
+border-radius: 4px;
+font-weight: 400;
+font-size: 18px;
 text-align: center;
 text-transform: uppercase;
 color: #FFFFFF;
