--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,129 +1,201 @@
 * {
-  font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
+/* Обратите внимание на измения для "липкой" шапки, пометил их звездочкой ниже */
 header {
-  position: relative;
+    position: relative;
+    height: 50px; /* * */
 }
 nav {
-height: 50px;
-background: #212121;
+    position: fixed; /* * */
+    width: 100%; /* * */
+    height: 50px;
+    background-color: #212121;
+    z-index: 2; /* * */
 }
 .menu {
-  display: flex;
-  justify-content: space-between;
-  padding: 13px 70px;
-  margin: 0;
-  list-style-type: none;
-  }
-  .menu .menu_link {
-font-weight: 300;
-font-size: 15px;
-color: #FFFFFF;
-text-decoration: none;
-  }
-  .menu .menu_item {
+    display: flex;
+    justify-content: space-between;
+    padding: 13px 70px;
+    margin: 0;
+    list-style-type: none;
+}
+
+.menu .menu_link {
+    color: #ffffff;
+    font-size: 15px;
+    font-weight: 300;
+}
+
+.menu .menu_item {
     border-right: 2px dotted black;
     padding-right: 28px;
-  }
-  .subheader {
-  background-color: rgba(0, 0, 0, .6);
-  height: 84px;
-  position: absolute;
-  width: 100%;
-  }
-  .subheader .subheader_logo {
+}
+
+.subheader {
+    position: absolute;
+    top: 50px; /* * */
+    width: 100%;
+    height: 84px;
+    background-color: rgba(0,0,0, .6);
+}
+
+.subheader .subheader_logo {
     display: block;
     max-width: 100%;
     margin-top: 16px;
-  }
-  .subheader .subheader_oficial {
+}
+
+.subheader .subheader_official {
     margin-top: 6px;
-font-weight: 400;
-font-size: 13px;
-color: #FFFFFF;
-opacity: .5;
-  }
-  .subheader .subheader_call {
-margin-top: 19px;
-font-size: 12px;
-line-height: 14px;
-align-items: center;
-text-align: right;
-color: #FFFFFF;
-  }
-  .subheader .subheader_phone {
-display: block;
-font-weight: 400;
-font-size: 22px;
-align-items: center;
-text-align: center;
-text-transform: uppercase;
-color: #FFFFFF;
-text-decoration: none;
-margin-top: 8px;
-line-height: 12px;
-  }
-  .subheader .subheader_btn {
-margin-top: 19px;
-width: 172px;
-height: 46px;
-background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%);
-box-shadow: inset 0px -3px 0px rgba(0, 0, 0, 0.12);
-border: none;
-border-radius: 4px;
-font-weight: 400;
-font-size: 14px;
-align-items: center;
-text-align: center;
-text-transform: uppercase;
-color: #FFFFFF;
-text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21);
-  }
-  .promo {
-    min-height: 800px;
-    background: url(../img/uber_bg.jpg) center center/cover no-repeat;
-    padding: 150px 0 135px 0;
-  }
-  .promo .promo_header {
-font-weight: 700;
-font-size: 60px;
-text-transform: uppercase;
-color: #FFFFFF;
-line-height: 60px;
-margin: 0;
-text-align: center;
-  }
-  .promo .promo_subheader {
-    font-weight: 700;
-    font-size: 36px;
+    opacity: 0.5;
+    color: #ffffff;
+    font-size: 13px;
+    font-weight: 400;
+}
+
+.subheader .subheader_call {
+    color: #ffffff;
+    font-size: 12px;
+    font-weight: 300;
+    margin-top: 19px;
+    text-align: right;
+}
+
+.subheader .subheader_phone {
+    display: block;
+    margin-top: 8px;
+    color: #ffffff;
+    font-size: 22px;
+    font-weight: 400;
     text-transform: uppercase;
-    color: #FFFFFF;
+    text-align: right;
+    line-height: 12px;
+}
+
+.subheader .subheader_btn {
+    margin-top: 19px;
+    width: 172px;
+    height: 46px;
+    box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12);
+    border: none;
+    border-radius: 4px;
+    background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21);
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.promo {
+    min-height: 800px;
+    background: url('../img/bg/main_bg.jpg') center center/cover no-repeat;
+    padding: 150px 0 135px 0;
+}
+.promo .promo_header {
+    color: #ffffff;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 60px;
+    line-height: 60px;
+    margin: 0;
+    text-align: center;
+}
+.promo .promo_subheader  {
+    color: #ffffff;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 36px;
     line-height: 36px;
     margin: 0;
     margin-top: 22px;
     text-align: center;
-  }
-  .promo .promo_descr {
-font-weight: 400;
-font-size: 18px;
-line-height: 24px;
-text-align: center;
-color: #FFFFFF;
-margin-top: 23px;
-  }
-  .promo .promo_btn {
-display: block;
-margin: 118px auto 0 auto;
-width: 259px;
-height: 63px;
-background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%);
-box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.12);
-border: none;
-border-radius: 4px;
-font-weight: 400;
-font-size: 18px;
-text-align: center;
-text-transform: uppercase;
-color: #FFFFFF;
-text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21);
-  }
+}
+
+.promo .promo_descr {
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+    margin-top: 23px;
+}
+
+.promo .promo_btn {
+    display: block;
+    margin: 118px auto 0 auto;
+    width: 259px;
+    height: 63px;
+    box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12);
+    border: none;
+    border-radius: 4px;
+    background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%);
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21);
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.reasons {
+    padding: 71px 0 65px 0;
+}
+
+.label {
+    margin: 0 auto;
+    height: 24px;
+    width: 112px;
+    padding: 5px 12px;
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 11px;
+    font-weight: 300;
+    text-transform: uppercase;
+}
+
+.title {
+    margin-bottom: 0;
+    margin-top: 38px;
+    color: #222222;
+    font-size: 38px;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.reasons .reasons_block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 35px;
+}
+
+.reasons .reasons_block .reasons_round {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 26px;
+    width: 113px;
+    height: 113px;
+    background-color: #1eacc7;
+    border-radius: 100%;
+}
+
+.reasons .reasons_block .reasons_descr {
+    width: 343px;
+}
+
+.reasons .reasons_block .reasons_descr .reasons_subtitle{
+    line-height: 21px;
+    color: #1eacc7;
+    font-size: 17px;
+    font-weight: 400;
+}
+
+.reasons .reasons_block .reasons_descr .reasons_text {
+    color: #202020;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 21px;
+}
