--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,10 +1,11 @@
 $main-color: #1eacc7
 $second-color: #ff5656
 
-=btn_hover
-	&:hover
-		background-image: none
+=btn_hover 
+	&:hover 
+		background-image: none 
 		background-color: $main-color
+
 *
 	font-family: 'Roboto', sans-serif
 
@@ -29,6 +30,9 @@ nav
 		color: #ffffff
 		font-size: 15px
 		font-weight: 300
+		&:hover
+			text-decoration: none
+			color: $main-color
 	&_item
 		border-right: 2px dotted black
 		padding-right: 28px
@@ -139,9 +143,11 @@ nav
 	text-transform: uppercase
 	text-align: center
 	z-index: 2
-	&_white
+	&_white 
 		background-color: #fff
 		color: #000
+	&_min 
+		width: 76px
 
 .title
 	position: relative
@@ -154,7 +160,7 @@ nav
 	text-transform: uppercase
 	text-align: center
 	z-index: 2
-	&_white
+	&_white 
 		color: #fff
 
 .subtitle
@@ -165,7 +171,7 @@ nav
 	font-weight: 400
 	text-align: center
 	z-index: 2
-	&_white
+	&_white 
 		color: #fff
 
 .reasons .reasons_block
@@ -194,14 +200,14 @@ nav
 			font-size: 15px
 			font-weight: 300
 			line-height: 21px
-
-.mobile
+	
+.mobile 
 	min-height: 864px
 	padding: 48px 0 79px 0
 	background: url('../img/bg/mobile_app.png') center (center / cover) no-repeat
-	.row
+	.row 
 		margin-top: 32px
-	&_item
+	&_item 
 		position: relative
 		width: 320px
 		height: 280px
@@ -228,7 +234,7 @@ nav
 			text-transform: uppercase
 			text-align: center
 		&_plus
-			display: flex
+			display: flex 
 			justify-content: center
 			align-items: center
 			position: absolute
@@ -244,86 +250,176 @@ nav
 			&:before
 				content: ''
 				display: block
-				width: 14px
-				height: 2px
+				width: 14px 
+				height: 2px 
 				background-color: $main-color
 				transition: 0.3s all
-			&:after
+			&:after 
 				content: ''
-				position: absolute
+				position: absolute 
 				left: 50%
 				transform: translateX(-50%)
-				display: block
+				display: block 
 				height: 14px
 				width: 2px
 				background-color: $main-color
 				transition: 0.3s all
-			&:hover
-				&:before, &:after
+			&:hover 
+				&:before, &:after 
 					background-color: $second-color
-.choice
+
+
+.choice 
 	position: relative
 	min-height: 895px
 	padding: 57px 0 138px 0
 	background: url('../img/bg/mobile_app.png') center (center / cover) no-repeat
-	&_img
+	&_img 
 		position: relative
 		display: block
 		margin: 56px auto 0 auto
 		z-index: 2
-	&_descr
+	&_descr 
 		text-align: center
 		color: #222222
 		font-size: 17px
 		font-weight: 300
 		line-height: 24px
-	.black
-		position: absolute
+	.black 
+		position: absolute 
 		top: 0
 		left: 0
 		height: 499px
 		width: 100%
 		background-color: #070716
 		z-index: 1
+
 .require
 	padding: 68px 0 84px 0
-	&_block
+	&_block 
 		margin: 33px 0
 		&_nmb
 			margin-bottom: 0px
-	&_title
-		font-weight: 400
+	&_title 
+		color: #1ca8c3
 		font-size: 22px
-		color: #1CA8C3
-	&_list
+		font-weight: 400
+	&_list 
 		list-style-type: none
 		padding-left: 50px
 		margin-top: 22px
-		li
+		li 
 			position: relative
 			font-size: 17px
 			font-weight: 300
 			line-height: 24px
 			margin-bottom: 10px
-			&:before
+			&:before 
 				content: ''
-				display: block
+				display: block 
 				position: absolute
 				left: -32px
 				top: 3px
-				width: 21px
+				width: 21px 
 				height: 20px
 				background: url('../icons/check_blue.svg') center (center / cover) no-repeat
-	&_descr
+	&_descr 
 		margin-top: 25px
 		font-size: 17px
 		font-weight: 300
 		line-height: 24px
-		color: #1CA8C3
-	.warning
+		color: #1ca8c3
+	.warning 
 		.require_title
 			color: $second-color
 		.require_list
-			li
+			li 
 				&:before
 					background: url('../icons/check_red.svg') center (center / cover) no-repeat
+.world 
+	position: relative
+	min-height: 717px
+	padding: 49px 0
+	background: url('../img/bg/map.jpg') center (center / cover) no-repeat
+	&_link 
+		position: absolute
+		left: 50%
+		transform: translateX(-50%)
+		bottom: 49px
+		text-align: center
+		font-size: 15px
+		font-weight: 400
+		line-height: 68px
+		text-transform: uppercase
+		color: #1fbad6
+		&:hover 
+			text-decoration: none
+			color: #fff
+footer 
+	padding: 14px 23px 39px 23px
+	a 
+		&:hover 
+			text-decoration: none
+.footer
+	&_divider
+		width: 299px
+		height: 4px
+		background-color: #1fbad6
+		margin: 0 auto
+	&_wrapper
+		display: flex 
+		justify-content: space-between
+		align-items: flex-start
+		padding-top: 32px
+	&_wrapper > div 
+		width: 33%
+		&:nth-child(3)
+			display: flex 
+			justify-content: flex-end
+	&_social
+		width: 160px
+		display: flex
+		justify-content: space-between
+		&_item 
+			display: flex 
+			justify-content: center
+			align-items: center
+			margin: 0 4px 
+			width: 32px
+			height: 32px
+			background-color: #070716
+			border-radius: 100%
+			i 
+				color: #fff
+	&_links
+		width: 390px
+		margin: 0 auto
+		&_main 
+			display: flex 
+			justify-content: space-between
+			padding: 0 10px
+			a 
+				color: #070716
+				font-size: 15px
+				font-weight: 300
+				text-transform: uppercase
+		&_sub 
+			display: flex 
+			justify-content: space-between
+			margin-top: 10px
+			a 
+				color: #999999
+				font-size: 11px
+				font-weight: 300
+				text-transform: uppercase
+		&_lang 
+			display: block 
+			margin: 0 auto
+			color: #1fbad6
+			font-size: 11px
+			font-weight: 400
+			margin-top: 19px
+			text-transform: uppercase
+			text-align: center
+
+	&_mobile
